# tokyo-landprice-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.github/workflows/: qdrant.yml  server.yml
.husky/: pre-commit
client/: .env.example  Dockerfile  README.md  eslint.config.ts  index.html  package-lock.json  package.json  stylelint.config.js
client/public/data/: L01-25_13.pmtiles
client/src/: App.vue  main.ts
client/src/__tests__/: App.spec.ts
client/src/components/: ChatComponent.vue  ChatMessageComponent.vue  MapComponent.vue
client/src/composables/: useApi.ts  useLanguage.ts
client/src/services/: index.ts  runtime.ts
client/src/services/.openapi-generator/: FILES
client/src/services/apis/: HealthApi.ts  MessagesApi.ts  index.ts
client/src/services/models/: ErrorResponse.ts  HealthCheck200Response.ts  HealthCheckDefaultResponse.ts  HealthCheckResponse.ts  PostMessage200Response.ts  PostMessageRequest.ts  PostMessageResponse.ts  index.ts
qdrant/: fly.toml
scripts/: .env.example  README.md  eval.py  init_qdrant.py  pyproject.toml
server/: .gitignore  README.md  pyproject.toml  samconfig.toml  secret.example.json  template.yaml
server/openapi/: openapi.yml
server/openapi/paths/: health.yml  messages.yml
server/src/: __init__.py  requirements.txt
server/src/core/: auth.py  env.py  logger.py  openai.py  qdrant.py  secret.py
server/src/health/: handler.py
server/src/messages/: handler.py  model.py  service.py
