[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "langchain-openai>=1.1.7",
    "mapclassify>=2.10.0",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "ragas>=0.4.3",
    "tqdm>=4.67.1",
]
